Concerto de erros nas funções

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport content" width="device-width, inicial-scale = 1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil Interativo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -55,15 +55,20 @@
         }
     }
 
-    function removerHobby(){
-
+    function mudarCordeFundo() {
+    const cores = ["#f8d7da", "#d1ecf1", "#fff3cd", "#cce5ff"];
+    const corAleatoria = cores[Math.floor(Math.random() * cores.length)];
+    document.getElementById("profileCard").style.backgroundColor = corAleatoria;
     }
 
-    function mudarCordeFundo(){
-        const cores=["#f8d7da", "#dlecfl", "#fff3cd", "cce5ff"];
-        const corAleatoria = cores[Math.floor(Math.random()*cores.length)];
-        document.getElementById("profileCard").style.backgroundColor=corAleatoria;
+
+    function alterarFoto() {
+    const novaFoto = prompt("Digite o URL da nova foto: ");
+    if (novaFoto) {
+        document.getElementById("profileImage").src = novaFoto;
     }
+    }
+
 </script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
