Nova imagem de um tigre

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="container mt-5">
     <div class="card" id="profileCard">
         <div class="card-body text-center">
-            <img src="https://via.placeholder.com/150" alt="Imagem de Perfil" class=" rounded-circle mb-3" id="profileImage" style="width: 150px;">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/Tigre.jpg/1200px-Tigre.jpg" alt="Imagem de Perfil" class=" rounded-circle mb-3" id="profileImage" style="width: 150px;">
             <h3 id="profileName">Nome: Pietro Pereira Dalla Vecchia</h3>
             <p id="profileAge">Idade: 17</p>
 
